@@ -155,7 +155,7 @@ wxString wxGetStockLabel(wxWindowID id, long flags)
         STOCKITEM(wxID_EXECUTE,             _("&Execute"),            _("Execute"));
         STOCKITEM(wxID_EXIT,                _("&Quit"),               _("Quit"));
         STOCKITEM(wxID_FILE,                _("&File"),               _("File"));
-        STOCKITEM(wxID_FIND,                _("&Find"),               _("Find"));
+        STOCKITEM(wxID_FIND,                _("&Find..."),            _("Find..."));
         STOCKITEM(wxID_FIRST,               _("&First"),              _("First"));
         STOCKITEM(wxID_FLOPPY,              _("&Floppy"),             _("Floppy"));
         STOCKITEM(wxID_FORWARD,             _("&Forward"),            _("Forward"));
@@ -185,10 +185,10 @@ wxString wxGetStockLabel(wxWindowID id, long flags)
         STOCKITEM(wxID_REDO,                _("&Redo"),               _("Redo"));
         STOCKITEM(wxID_REFRESH,             _("Refresh"),             _("Refresh"));
         STOCKITEM(wxID_REMOVE,              _("Remove"),              _("Remove"));
-        STOCKITEM(wxID_REPLACE,             _("Rep&lace"),            _("Replace"));
+        STOCKITEM(wxID_REPLACE,             _("Rep&lace..."),         _("Replace..."));
         STOCKITEM(wxID_REVERT_TO_SAVED,     _("Revert to Saved"),     _("Revert to Saved"));
         STOCKITEM(wxID_SAVE,                _("&Save"),               _("Save"));
-        STOCKITEM(wxID_SAVEAS,              _("&Save as"),            _("Save as"));
+        STOCKITEM(wxID_SAVEAS,              _("Save &As..."),         _("Save As..."));
         STOCKITEM(wxID_SELECTALL,           _("Select &All"),         _("Select All"));
         STOCKITEM(wxID_SELECT_COLOR,        _("&Color"),              _("Color"));
         STOCKITEM(wxID_SELECT_FONT,         _("&Font"),               _("Font"));
@@ -258,11 +258,14 @@ wxString wxGetStockHelpString(wxWindowID id, wxStockHelpStringClient client)
         STOCKITEM(wxID_COPY,     wxSTOCK_MENU, _("Copy selection"))
         STOCKITEM(wxID_CUT,      wxSTOCK_MENU, _("Cut selection"))
         STOCKITEM(wxID_DELETE,   wxSTOCK_MENU, _("Delete selection"))
-        STOCKITEM(wxID_REPLACE,  wxSTOCK_MENU, _("Replace selection"))
+        STOCKITEM(wxID_FIND,     wxSTOCK_MENU, _("Find in document"))
+        STOCKITEM(wxID_REPLACE,  wxSTOCK_MENU, _("Find and replace in document"))
         STOCKITEM(wxID_PASTE,    wxSTOCK_MENU, _("Paste selection"))
         STOCKITEM(wxID_EXIT,     wxSTOCK_MENU, _("Quit this program"))
         STOCKITEM(wxID_REDO,     wxSTOCK_MENU, _("Redo last action"))
         STOCKITEM(wxID_UNDO,     wxSTOCK_MENU, _("Undo last action"))
+        STOCKITEM(wxID_NEW,      wxSTOCK_MENU, _("Create new document"))
+        STOCKITEM(wxID_OPEN,     wxSTOCK_MENU, _("Open an existing document"))
         STOCKITEM(wxID_CLOSE,    wxSTOCK_MENU, _("Close current document"))
         STOCKITEM(wxID_SAVE,     wxSTOCK_MENU, _("Save current document"))
         STOCKITEM(wxID_SAVEAS,   wxSTOCK_MENU, _("Save current document with a different filename"))
@@ -293,13 +296,12 @@ wxAcceleratorEntry wxGetStockAccelerator(wxWindowID id)
         STOCKITEM(wxID_COPY,                wxACCEL_CTRL,'C')
         STOCKITEM(wxID_CUT,                 wxACCEL_CTRL,'X')
         STOCKITEM(wxID_FIND,                wxACCEL_CTRL,'F')
-        STOCKITEM(wxID_HELP,                wxACCEL_CTRL,'H')
         STOCKITEM(wxID_NEW,                 wxACCEL_CTRL,'N')
         STOCKITEM(wxID_OPEN,                wxACCEL_CTRL,'O')
         STOCKITEM(wxID_PASTE,               wxACCEL_CTRL,'V')
         STOCKITEM(wxID_PRINT,               wxACCEL_CTRL,'P')
         STOCKITEM(wxID_REDO,                wxACCEL_CTRL | wxACCEL_SHIFT,'Z')
-        STOCKITEM(wxID_REPLACE,             wxACCEL_CTRL,'R')
+        STOCKITEM(wxID_REPLACE,             wxACCEL_CTRL,'H')
         STOCKITEM(wxID_SAVE,                wxACCEL_CTRL,'S')
         STOCKITEM(wxID_UNDO,                wxACCEL_CTRL,'Z')
 #ifdef __WXOSX__
